Add lang and alt.

--- a/IT2805/Assignment4/index.html
+++ b/IT2805/Assignment4/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
   <head>
       <title>HTML5 Video and CSS</title>
       <meta charset="utf-8">
@@ -8,7 +8,7 @@
   <body>
     <div id="screen">
 
-      <img id="mobileImage" src="img/hovedbygget.png">
+      <img id="mobileImage" src="img/hovedbygget.png" alt="Hovedbygget">
 
       <video autoplay muted loop poster="img/hovedbygget.png"> <!-- Part 1 and 3-->
         <source src="videos/hovedbygget.mp4" type="video/mp4"> <!-- Part 2: IE, Mozilla(46), Chrome -->
