Linting. Replacing for loop with for of at part 3.

--- a/IT2805/Assignment5/index.html
+++ b/IT2805/Assignment5/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="no">
   <head>
     <meta charset="utf-8">
     <title>IT2805 assignment 5: JavaScript introduction</title>
@@ -49,6 +49,6 @@
       and noticed that the JS was going to be used for DOM-manipulation. The HTML has to be rendered, ID's to be declared etc. in order for the
       JS to access them. Also, in case the JS crashes, the HTML will still load.
     -->
-    <script type="text/javascript" src="./script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
