Validator no longer complains.

--- a/IT2805 - Webteknologi/Assignment6/index.html
+++ b/IT2805 - Webteknologi/Assignment6/index.html
@@ -76,11 +76,11 @@
           <input type="number" name="tax" id="taxID" disabled>
         </label>
 
-        <input type="submit" name="submit" value="Submit">
+        <input type="submit" value="Submit">
     </fieldset>
   </form>
 
-  <script src="./scripts/script.js" type="text/javascript"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
