--- a/IT2805 - Webteknologi/Assignment6/index.html
+++ b/IT2805 - Webteknologi/Assignment6/index.html
@@ -76,7 +76,7 @@
           <input type="number" name="tax" id="taxID" disabled>
         </label>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit tax form">
     </fieldset>
   </form>
 
