Switch to gender on radio button.

--- a/IT2805 - Webteknologi/Assignment6/index.html
+++ b/IT2805 - Webteknologi/Assignment6/index.html
@@ -20,17 +20,14 @@
           <input type="text" placeholder="Ola Nordmann" name="realName" required>
         </label>
 
-        <br />
-
         <label>Gender:
           <!-- Drop down list -->
-          <select name="gender" required>
-            <option value="" selected disabled>Pick one</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-          </select>
+          <input type="radio" name="gender">Male
+          <input type="radio" name="gender">Female
         </label>
-    
+        
+        <br />
+
         <label>E-mail:
           <input type="email" name="email" placeholder="example@domain.com" required>
         </label>
