Add comments, remove useless ID.

--- a/IT2805 - Webteknologi/Assignment7/todo.html
+++ b/IT2805 - Webteknologi/Assignment7/todo.html
@@ -10,17 +10,21 @@
 </head>
 <body>
   <section>
+    <!-- A title -->
     <h1>Welcome to Todoist 2.0</h1>
 
     <label>What has to be done?
+      <!-- Input field -->
       <input id="inputField" autofocus>
     </label>
+
+    <!-- A button -->
     <button id="addItem" onclick="addTask()">Add tasks</button>
 
-    <div id="listWrapper">
+      <!-- Output -->
       <ul id="taskList">
+
       </ul>
-    </div>
 
     <p id="completed"></p>
 
