--- a/IT2805 - Webteknologi/canvasPractice/index.html
+++ b/IT2805 - Webteknologi/canvasPractice/index.html
@@ -10,6 +10,7 @@
   <canvas id="canvas1" width="200" height="100"></canvas>
   <canvas id="canvas2" width="200" height="100"></canvas>
   <canvas id="canvas3" width="800" height="800"></canvas>
+  <canvas id="canvas4" width="800" height="800"></canvas>
 <script src="./script.js"></script>
 </body>
 </html>
