--- a/IT2805 - Webteknologi/canvasPractice/index.html
+++ b/IT2805 - Webteknologi/canvasPractice/index.html
@@ -16,6 +16,12 @@
   <canvas id="canvas4" width="200" height="200"></canvas>
   <br />
   <canvas id="canvas5" width="300" height="300"></canvas>
-<script src="./script.js"></script>
+  <br />
+  <canvas id="canvas6" width="300" height="300"></canvas>
+
+  <button onclick="addLines()">Try me</button>
+
+  <p id="linesGoHere"></p>
+  <script src="./script.js"></script>
 </body>
 </html>
