--- a/IT2805 - Webteknologi/canvasPractice/index.html
+++ b/IT2805 - Webteknologi/canvasPractice/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <button onclick="addMeters()">Try me</button>
+  <ul id="meterList" style="list-style-type: none;"></ul>
+
   <canvas id="canvas1" width="200" height="100"></canvas>
   <br />
   <canvas id="canvas2" width="200" height="100"></canvas>
@@ -19,9 +22,6 @@
   <br />
   <canvas id="canvas6" width="300" height="300"></canvas>
 
-  <button onclick="addLines()">Try me</button>
-
-  <p id="linesGoHere"></p>
   <script src="./script.js"></script>
 </body>
 </html>
