--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
@@ -10,48 +10,9 @@
 <style>
 /* This file needs to be empty to avoid default styling */
 </style>
-<script type="text/javascript" src="https://livejs.com/live.js"></script>
 <link rel="stylesheet" href="style/latex.css" />
 <link rel="stylesheet" href="style/tables.css" />
-<link rel="stylesheet" href="style/print.css" />
-<link rel="stylesheet" href="style/pagebreaks.css" />
-<script type="text/x-mathjax-config;executed=true">
-  MathJax.Hub.Config({
-    messageStyle: "none",
-    tex2jax: {
-      inlineMath: [["\\(", "\\)"]],
-      displayMath: [["\\[", "\\]"]],
-      ignoreClass: "nostem|nolatexmath"
-    },
-    asciimath2jax: {
-      delimiters: [["\\$", "\\$"]],
-      ignoreClass: "nostem|noasciimath"
-    },
-    TeX: { equationNumbers: { autoNumber: "none" } }
-  })
-  MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
-    MathJax.InputJax.AsciiMath.postfilterHooks.Add(function (data, node) {
-      if ((node = data.script.parentNode) && (node = node.parentNode) && node.classList.contains("stemblock")) {
-        data.math.root.display = "block"
-      }
-      return data
-    })
-  })
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
-
-<script>
-  window.PagedConfig = {
-    auto: false,
-  };
-</script>
-<script src="https://unpkg.com/pagedjs/dist/paged.polyfill.js"></script>
-<script src="./configuration/print/scripts/table-headers.js"></script>
-<script>
-  MathJax.Hub.Queue(function () {
-    window.PagedPolyfill.preview();
-  });
-</script>
+<script type="text/javascript" src="https://livejs.com/live.js"></script>
 </head>
 <body class="article">
 <div id="header">
@@ -70,7 +31,7 @@
 <li><a href="#_enterprise_modeling">1. Enterprise Modeling</a>
 <ul class="sectlevel2">
 <li><a href="#_case_description">1.1. Case Description</a></li>
-<li><a href="#_purposegoal_of_the_model">1.2. Purpose/Goal of the Model</a></li>
+<li><a href="#_purposegoal">1.2. Purpose/Goal</a></li>
 <li><a href="#_the_model">1.3. The Model</a></li>
 <li><a href="#_design_of_the_model">1.4. Design of the Model</a></li>
 <li><a href="#_perspectivesaspects">1.5. Perspectives/Aspects</a></li>
@@ -114,54 +75,59 @@
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_case_description">1.1. Case Description</h3>
-<table class="tableblock frame-all grid-all stretch">
-<colgroup>
-<col style="width: 50%;">
-<col style="width: 50%;">
-</colgroup>
-<thead>
-<tr>
-<th class="tableblock halign-left valign-top">Expectations</th>
-<th class="tableblock halign-left valign-top">Theory related</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">A good textual description of the case that you will model and your
-motivations for selecting this case and modelling. Are there any challenges
-you want to address? Is there something you want to clarify?</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">If the description is inadequate, unclear or incomplete, marks will be
-deducted.</p></td>
-</tr>
-</tbody>
-</table>
+<div class="paragraph">
+<p>The selected case and its focus will be on the student association, Online.
+Online is one of the most significant student associations at NTNU, with nearly a thousand active members.
+Hierarchically, Online is built up by several committees, some larger than others.
+Out of the nearly thousand active members, at least 160 of them are committee members powering Online.</p>
+</div>
+<div class="paragraph">
+<p>The case will specifically target a process in one of the committees - Trikom.
+Trikom is the committee for well-being.
+The committee is in charge of the kiosk at Online&#8217;s office and organizes smaller social events, to mention some.</p>
+</div>
+<hr>
+<div class="paragraph">
+<p>The case itself regards the kiosk, hereafter called 'Kiosken.'
+Kiosken has a relatively broad selection of both snacks and soft drinks.
+Students purchase these items through an internal economy connected to the student ID cards.</p>
+</div>
+<div class="paragraph">
+<p>Students would like to have all items available at all times.
+However, through some research and personal experiences, it is clear that the availability of items is unpredictable.
+For example, students experience empty shelves of their favorite snacks for an extensive period, and there is no
+way of knowing when a restock happens.</p>
+</div>
+<div class="paragraph">
+<p>As for the committee members of Trikom, there are several annoyances as well.
+The restocking process appears to be quite comprehensive and unpredictable.
+'When will it happen,' 'who is responsible,' and 'who does what' are frequently asked questions.
+Further, it appears to be much micromanagement which in an ideal world would not exist.</p>
+</div>
+<div class="paragraph">
+<p>As a member of Online, I am a frequent user of Kiosken.
+The problems mentioned above significantly impact me as a regular customer.
+My biggest motivation for the presented case is to figure out how to streamline the restocking process and thus provide better and more predictable availability of the goods in Kiosken.</p>
+</div>
+<div class="paragraph">
+<p>By utilizing an enterprise model, from Trikom&#8217;s perspective, one can hopefully understand the underlying processes of the restocking and identify innovations to streamline those.</p>
+</div>
+<h3 id="_case_processes" class="discrete">Case Processes</h3>
+<div class="paragraph">
+<p>The overall process of keeping Kiosken restocked, is a combination of several smaller processes. The following paragraphs are meant to give a brief introduction to these.</p>
+</div>
 </div>
 <div class="sect2">
-<h3 id="_purposegoal_of_the_model">1.2. Purpose/Goal of the Model</h3>
-<table class="tableblock frame-all grid-all stretch">
-<colgroup>
-<col style="width: 50%;">
-<col style="width: 50%;">
-</colgroup>
-<thead>
-<tr>
-<th class="tableblock halign-left valign-top">Expectations</th>
-<th class="tableblock halign-left valign-top">Theory related</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Why are you modeling? How would the model address your case? What
-purpose would your model serve? Note: this is very important for evaluating
-the model as your model should be evaluated against this.</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">This must be very clear and well scoped. Sub-goals are also important. (Note:
-goals of the model, not the enterprise you&#8217;re modelling.) What are the success
-criteria for your model? How would you know if/when the purpose of the
-model is fulfilled - connection to evaluation of the model? Who wil be the
-main users and beneficiaries of the model?</p></td>
-</tr>
-</tbody>
-</table>
+<h3 id="_purposegoal">1.2. Purpose/Goal</h3>
+<div class="paragraph">
+<p>The current models give a precise overview of the relevant parts of the case AS IS.
+The purpose is to give valuable insight into the details of the restock process regarding essential actors, resources, goals, and processes.
+No unnecessary information will surface, and the models have a logical easy-to-follow structure.</p>
+</div>
+<div class="paragraph">
+<p>By following the models, one could hopefully discover weak points of the processes
+through analysis and research and adjust accordingly.</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_the_model">1.3. The Model</h3>
@@ -186,6 +152,34 @@ The model should for the most part explain it self.</p></td>
 </tr>
 </tbody>
 </table>
+<div class="paragraph">
+<div class="title">Goal Model || 4EM</div>
+<p><span class="image"><img src="figures/ASIS/4EM_2-Goals.png" alt="GOALS"></span></p>
+</div>
+<div class="paragraph">
+<p>This model is very interesting because of this and that</p>
+</div>
+<div class="paragraph">
+<div class="title">Business Process View || 4EM</div>
+<p><span class="image"><img src="figures/ASIS/4EM_2-Process.png" alt="PROCESS"></span></p>
+</div>
+<div class="paragraph">
+<p>This model is very interesting because of this and that</p>
+</div>
+<div class="paragraph">
+<div class="title">Actors and Resources Model || 4EM</div>
+<p><span class="image"><img src="figures/ASIS/4EM_2-Actors.png" alt="ACTORS"></span></p>
+</div>
+<div class="paragraph">
+<p>This model is very interesting because of this and that</p>
+</div>
+<div class="paragraph">
+<div class="title">Enterprise model || 4EM</div>
+<p><span class="image"><img src="figures/ASIS/4EM_2-EM.png" alt="EM"></span></p>
+</div>
+<div class="paragraph">
+<p>This model is very interesting because of this and that</p>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_design_of_the_model">1.4. Design of the Model</h3>
@@ -557,7 +551,7 @@ different next time?</p></td>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-04 14:38:37 +0100
+Last updated 2021-11-08 13:36:30 +0100
 </div>
 </div>
 <script type="text/x-mathjax-config">
