Work hard. Complain harder.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
@@ -114,7 +114,39 @@ My biggest motivation for the presented case is to figure out how to streamline 
 </div>
 <h3 id="_case_processes" class="discrete">Case Processes</h3>
 <div class="paragraph">
-<p>The overall process of keeping Kiosken restocked, is a combination of several smaller processes. The following paragraphs are meant to give a brief introduction to these.</p>
+<p>The overall process of keeping Kiosken restocked, is a combination of several smaller processes.
+The following paragraphs are meant to give a brief introduction to these.</p>
+</div>
+<div class="paragraph">
+<p><strong>The Process of Identifying a Need For a Restock</strong></p>
+</div>
+<div class="paragraph">
+<p>As of now, there is no concrete process of identifying the need for a restock.
+The need is identified by regular users reporting a lack of items, or by Trikom members checking manually.
+Even though regular users report few items, or they are identified as out of stock by Trikom themselves, the actually restock may not happen immediately.
+It is a common practice to wait for Kiosken to be almost out of stock of all items before a restock is even planned.</p>
+</div>
+<div class="paragraph">
+<p><strong>The Process of Planning a Restock</strong></p>
+</div>
+<div class="paragraph">
+<p>When a restock is about to happen, a shopping list is to be made.
+All items in Kiosken is counted, and how much of each should be bought is calculated.
+A part of the planning is also to check the dates of existing items, as well as checking the storage room for space for the new ones.
+When the storage is checked, and the shopping list is made, the Trikom members have to coordinate the shopping trip.
+Assigning different tasks to different Trikom members, varying from driving and shopping, to carrying and filling shelves and storage.</p>
+</div>
+<div class="paragraph">
+<p><strong>The Process of Restocking</strong></p>
+</div>
+<div class="paragraph">
+<p>A car has to be rented and several members have to perform the actual shopping.
+The shopping is done at a partner.
+When the shopping is finished, either the same members as those who shopped, or others, have to carry all the new items into the storage unit and restock the shelves.</p>
+</div>
+<div class="paragraph">
+<p>Once the entire restocking process is initiated, it is time consuming and involves many parts.
+Ideally certain sub processes can be be improved or even eliminated by innovation.</p>
 </div>
 </div>
 <div class="sect2">
