I'm sorry you're so easily offended.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
@@ -31,7 +31,11 @@
 <li><a href="#_enterprise_modeling">1. Enterprise Modeling</a>
 <ul class="sectlevel2">
 <li><a href="#_case_description">1.1. Case Description</a></li>
-<li><a href="#_purposegoal">1.2. Purpose/Goal</a></li>
+<li><a href="#_purpose">1.2. Purpose</a>
+<ul class="sectlevel3">
+<li><a href="#_goals">1.2.1. Goals</a></li>
+</ul>
+</li>
 <li><a href="#_the_model">1.3. The Model</a></li>
 <li><a href="#_design_of_the_model">1.4. Design of the Model</a></li>
 <li><a href="#_perspectivesaspects">1.5. Perspectives/Aspects</a></li>
@@ -150,15 +154,42 @@ Ideally certain sub processes can be be improved or even eliminated by innovatio
 </div>
 </div>
 <div class="sect2">
-<h3 id="_purposegoal">1.2. Purpose/Goal</h3>
+<h3 id="_purpose">1.2. Purpose</h3>
 <div class="paragraph">
-<p>The current models give a precise overview of the relevant parts of the case AS IS.
-The purpose is to give valuable insight into the details of the restock process regarding essential actors, resources, goals, and processes.
-No unnecessary information will surface, and the models have a logical easy-to-follow structure.</p>
+<p>Kiosken is not generating any income for Online.
+Most business constantly aim to increase their profit.
+However, the operation of Kiosken is a zero-profit project for Online.
+Better availability will not generate more revenue, but the user satisfaction will greatly increase, which is in line with Trikoms goals.</p>
 </div>
 <div class="paragraph">
-<p>By following the models, one could hopefully discover weak points of the processes
-through analysis and research and adjust accordingly.</p>
+<p>This model should serve as a beneficial overview of the key processes of the restocking of Kiosken.
+The current models give a precise overview of the relevant parts of the case AS IS.
+No unnecessary information will surface, and the models have a logical easy-to-follow structure.
+By getting a overview of all sub process, actors and goaals, Trikom could identify steps and processes that could be greatly improved.
+Through this, innovation can be applied, and Trikom optimize their processes, thus resulting in a better service for Onlines members.</p>
+</div>
+<div class="sect3">
+<h4 id="_goals">1.2.1. Goals</h4>
+<div class="paragraph">
+<p>There are many reasons to create enterprise models.</p>
+</div>
+<div class="quoteblock">
+<blockquote>
+A model is a generalized representation of a piece of reality, with only relevant real‐world properties taken into account during modeling. [<a href="#Sandkuhl_Stirna_Persson_Wißotzki_2014">1</a>]
+</blockquote>
+<div class="attribution">
+&#8212; Sandkuhl et al.
+</div>
+</div>
+<div class="paragraph">
+<p>In other words, models help to represent and understand how an enterprise works.
+The models represent a relevant piece of reality, aiming to give greater insight into information, functions, behaviour and further on.</p>
+</div>
+<div class="paragraph">
+<p>In this case, the models will as mentioned be used to analyze the business processes.
+To be precise, some sub goals will be <strong>identifying possible innovation(s)</strong> and <strong>identifying potential threats to reaching the business goals</strong>.
+Among the goals of the model,</p>
+</div>
 </div>
 </div>
 <div class="sect2">
@@ -571,7 +602,9 @@ different next time?</p></td>
 <div class="sect1">
 <h2 id="_bibliography">6. Bibliography</h2>
 <div class="sectionbody">
-
+<div class="paragraph">
+<p><a id="Sandkuhl_Stirna_Persson_Wißotzki_2014"></a>[1] K. Sandkuhl, J. Stirna, A. Persson, and M. Wißotzki, <em>Enterprise Modeling: Tackling Business Challenges with the 4EM Method</em>, Two thousand, fourteenth. Berlin, Germany: Springer, 2014.</p>
+</div>
 </div>
 </div>
 <div class="sect1">
