It's been monday for an entire year.

--- a/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
+++ b/TDT4252 - Virksomhets-arkitektur og -innovasjon/index.html
@@ -34,6 +34,7 @@
 <li><a href="#_purpose">1.2. Purpose</a>
 <ul class="sectlevel3">
 <li><a href="#_goals">1.2.1. Goals</a></li>
+<li><a href="#_success_criteria">1.2.2. Success criteria</a></li>
 </ul>
 </li>
 <li><a href="#_the_model">1.3. The Model</a></li>
@@ -183,12 +184,44 @@ A model is a generalized representation of a piece of reality, with only relevan
 </div>
 <div class="paragraph">
 <p>In other words, models help to represent and understand how an enterprise works.
-The models represent a relevant piece of reality, aiming to give greater insight into information, functions, behaviour and further on.</p>
+The model represent a relevant piece of reality, aiming to give greater insight into information, functions, behaviour and further on.</p>
 </div>
 <div class="paragraph">
-<p>In this case, the models will as mentioned be used to analyze the business processes.
-To be precise, some sub goals will be <strong>identifying possible innovation(s)</strong> and <strong>identifying potential threats to reaching the business goals</strong>.
-Among the goals of the model,</p>
+<p>In this case, the overall goal of the model is to be <strong>beneficial to analyze the business processes</strong>.
+Some sub goals will be to <strong>identify possible innovation(s)</strong> and <strong>identify potential threats to reaching the business goals</strong>.
+Further, a goal is to <strong>visualize</strong> the business processes to get a hands-on look at what is actually going on.
+Related to the vizualization-goal, a precise sub goal will be to <strong>create the model in such a way that the committe members of Trikom is able to utilize it</strong>.</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_success_criteria">1.2.2. Success criteria</h4>
+<div class="ulist">
+<ul>
+<li>
+<p>Goal 1: Beneficial to analyze the business processes</p>
+<div class="ulist">
+<ul>
+<li>
+<p>The model should be able to identify possible innovation(s).
+To achieve such, it has to include enough information with relevant details and perspectives/views. The goal is not met if the model is designed in a way that does not provide sufficient perspectives to analyze for possible innovation(s)/</p>
+</li>
+<li>
+<p>If Trikom is unable to identify potential risks, the model is not adequate enough.</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Goal 2: Visualization of business process</p>
+<div class="ulist">
+<ul>
+<li>
+<p>The models have to be precise and understandable. Only the relevant information should be provided, and it should be in such a way that the Trikom committee members can make use of it. The criteria is not met if the model leads to uncertainties or wrong conclusions.</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
 </div>
 </div>
 </div>
